Fixed wrapping for main content

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
 
+:root {
   /* COLORS */
   --background: #fff0d5;
   --card-background: #ffe3af;
   --yellow: #ffa600;
+  --yellow-dark: #d68306;
 
   --accent: #f506ff;
   --text-color: #231d24;
@@ -30,6 +32,7 @@ body {
   background-color: var(--background);
   font-family: "Sofia Sans", sans-serif;
   font-weight: var(--text-regular);
+  font-size: 1rem;
 }
 
 a {
@@ -37,54 +40,11 @@ a {
   color: inherit;
 }
 
-.parallax {
-  display: grid;
-  grid-template-areas: "stack";
-  position: relative;
-  z-index: 0;
-  contain: paint;
-  background-image: linear-gradient(var(--background), white);
-}
-
-.parallax > * {
-  contain: full;
-  grid-area: stack;
-  animation: parallax linear;
-  animation-timeline: scroll();
-}
-
-.parallax > img {
-  width: 100%;
-}
-
-.parallax__01 {
-  z-index: 4;
-  --parallax-speed: 0.5;
-}
-
-.parallax__02 {
-  z-index: 3;
-  --rotation-angle: -10deg;
-  --parallax-speed: 10;
-}
-
-.parallax__03 {
-  z-index: 2;
-  rotate: -5deg;
-  --parallax-speed: 20;
-  --rotation-angle: 10deg;
-}
-
-.parallax__04 {
-  z-index: 1;
-  --parallax-speed: 30;
-}
-
-@keyframes parallax {
-  to {
-    transform: translateY(calc(var(--parallax-speed) * 20px));
-    rotate: var(--rotation-angle);
-  }
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: clamp(320px, 90%, 1200px);
 }
 
 h1,
@@ -105,18 +65,25 @@ h1 {
 
 h2 {
   text-transform: uppercase;
-  font-size: clamp(1.5rem, 5vw + 1rem, 4rem);
+  font-size: clamp(1.5rem, 5vw + 1rem, 3rem);
 }
 
 h3 {
   font-size: clamp(1rem, 5vw + 1rem, 1.5rem);
-  padding-block: 0.5rem;
+}
+
+main {
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
 }
 
 section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--background);
 }
 
 section > div {
@@ -128,8 +95,91 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 5dvh;
+  padding-block: 5dvh;
   background-color: var(--yellow);
+}
+.parallax {
+  display: grid;
+  grid-template-areas: "stack";
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  contain: paint;
+  background-image: linear-gradient(
+    var(--background),
+    white 90%,
+    var(--yellow) 90%
+  );
+}
+
+.parallax > * {
+  contain: full;
+  grid-area: stack;
+  animation: parallax linear;
+  animation-timeline: scroll();
+}
+
+.parallax > img {
+  width: clamp(700px, 80dvw, 1800px);
+}
+
+.parallax__01 {
+  z-index: 4;
+  --parallax-speed: 0.5;
+}
+
+.parallax__02 {
+  z-index: 3;
+  --parallax-speed: 10;
+}
+
+.parallax__03 {
+  z-index: 2;
+  --parallax-speed: 20;
+}
+
+.parallax__04 {
+  z-index: 1;
+  --parallax-speed: 30;
+}
+
+@keyframes parallax {
+  to {
+    transform: translateY(calc(var(--parallax-speed) * 20px));
+  }
+}
+
+.navbar {
+  background-color: var(--background);
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+
+  padding-block: 0.5rem;
+  z-index: 2;
+}
+
+.nav_links {
+  list-style: none;
+  display: flex;
+  gap: 0.2rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.nav_links li {
+  padding: 0.5rem 2rem;
+  transition: 200ms;
+  border-radius: 10px;
+  font-weight: var(--text-bold);
+  color: var(--yellow-dark);
+}
+
+.nav_links li:hover {
+  background-image: linear-gradient(transparent, var(--card-background));
+  color: var(--text-color);
 }
 
 .resume {
@@ -139,10 +189,10 @@ footer {
 .introduction {
   display: flex;
   flex-direction: column;
-  padding-block: 6em;
+  padding-block: 6rem;
   justify-content: center;
   align-items: center;
-  gap: 1.5em;
+  gap: 1.5rem;
 }
 
 .about {
@@ -156,7 +206,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 0.5rem;
 }
 
 .socials li {
@@ -169,7 +219,6 @@ footer {
 .topics {
   display: flex;
   flex-direction: column;
-  padding-block: 3em;
   justify-content: center;
   align-items: flex-start;
   gap: 1.5em;
@@ -190,10 +239,21 @@ footer {
   width: 100%;
   gap: 1rem;
   overflow-x: auto;
-  padding-bottom: 1.5rem;
+  padding-block: 2rem;
   justify-content: start;
+  position: relative;
 
   scrollbar-color: var(--yellow) var(--card-background);
+}
+
+.experience::before {
+  content: "SCROLL FOR MORE \27F6";
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0;
+  color: var(--yellow);
+  font-size: 0.85rem;
+  font-weight: var(--text-bold);
 }
 
 .experience::-webkit-scrollbar {
@@ -211,24 +271,25 @@ footer {
 }
 
 .experience-card {
-  width: 34rem;
+  width: clamp(16rem, 60dvw, 32rem);
   padding: 2rem;
   border-radius: 20px;
   background-color: var(--card-background);
-  border: 1px solid var(--yellow);
+  border: 2px solid var(--yellow);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .date {
   color: var(--accent);
-  padding: 0.2rem 1rem;
   text-transform: uppercase;
   font-style: italic;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   letter-spacing: var(--spacing-eyebrow);
 }
 
 .company {
-  padding-bottom: 1rem;
   text-transform: uppercase;
   letter-spacing: var(--spacing-eyebrow);
 }
@@ -246,6 +307,7 @@ footer {
 
 .details {
   max-width: 72ch;
+  color: var(--text-color-light);
 }
 
 .skills-list {
@@ -259,16 +321,59 @@ footer {
 
 .skills-list li {
   background-color: var(--yellow);
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
+  font-size: 0.8rem;
 }
 
 .education-card {
   max-width: 75rem;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  gap: 0.5rem;
+  padding: 2rem 3rem;
+  border-left: 4px solid var(--yellow);
+  background-image: linear-gradient(
+    to right,
+    var(--card-background),
+    transparent
+  );
+}
+
+.contact {
+  background-image: linear-gradient(var(--background), var(--yellow));
+}
+
+.contact-info {
+  width: clamp(16rem, 60dvw, 32rem);
+  display: flex;
+  flex-direction: column;
+
   border-radius: 20px;
   background-color: var(--card-background);
-  border: 1px solid var(--yellow);
+  padding: 2rem 3rem;
+}
+
+.contact-address {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact-label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.contact-title {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: var(--spacing-eyebrow);
+}
+
+.contact-details {
+  font-size: 1rem;
+  font-weight: 700;
 }
